src/parser.output
Terminals unused in grammar

    TKN_GARBAGE


Grammar

    0 $accept: library $end

    1 library: global
    2        | %empty

    3 global: funcdef
    4       | vardecls

    5 funcdef: "func" TKN_IDENT "(" opt_idents ")" "{" stmts "}"

    6 vardecls: "auto" idents ";"

    7 opt_idents: idents
    8           | %empty

    9 idents: idents "," TKN_IDENT
   10       | TKN_IDENT

   11 stmts: stmts stmt
   12      | %empty

   13 stmt: "{" stmts "}"
   14     | "if" "(" expr ")" stmt
   15     | "if" "(" expr ")" stmt "else" stmt
   16     | "while" "(" expr ")" stmt
   17     | "return" ";"
   18     | "return" expr ";"
   19     | vardecls
   20     | expr ";"
   21     | inline_asm ";"

   22 opt_exprs: exprs
   23          | %empty

   24 exprs: expr "," exprs
   25      | expr

   26 expr: TKN_IVAL
   27     | TKN_STRVAL
   28     | TKN_IDENT
   29     | expr "(" opt_exprs ")"
   30     | expr "[" expr "]"
   31     | "!" expr
   32     | "~" expr
   33     | "&" expr
   34     | "*" expr
   35     | expr "*" expr
   36     | expr "/" expr
   37     | expr "%" expr
   38     | expr "+" expr
   39     | expr "-" expr
   40     | expr "<" expr
   41     | expr "<=" expr
   42     | expr ">" expr
   43     | expr ">=" expr
   44     | expr "==" expr
   45     | expr "!=" expr
   46     | expr "&" expr
   47     | expr "^" expr
   48     | expr "|" expr
   49     | expr "&&" expr
   50     | expr "||" expr
   51     | expr "=" expr

   52 inline_asm: "asm" "(" TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ":" opt_asm_strs ")"
   53           | "asm" "(" TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ")"
   54           | "asm" "(" TKN_STRVAL ":" opt_asm_regs ")"
   55           | "asm" "(" TKN_STRVAL ")"

   56 opt_asm_strs: asm_strs
   57             | %empty

   58 asm_strs: TKN_STRVAL "," asm_strs
   59         | TKN_STRVAL

   60 opt_asm_regs: asm_regs
   61             | %empty

   62 asm_regs: TKN_STRVAL "(" expr ")" "," asm_regs
   63         | TKN_STRVAL "(" expr ")"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "auto" <pos> (258) 6
    "func" <pos> (259) 5
    "if" <pos> (260) 14 15
    "else" <pos> (261) 15
    "while" <pos> (262) 16
    "return" <pos> (263) 17 18
    "asm" <pos> (264) 52 53 54 55
    "then" (265)
    "(" <pos> (266) 5 14 15 16 29 52 53 54 55 62 63
    ")" <pos> (267) 5 14 15 16 29 52 53 54 55 62 63
    "{" <pos> (268) 5 13
    "}" <pos> (269) 5 13
    "[" <pos> (270) 30
    "]" <pos> (271) 30
    ";" <pos> (272) 6 17 18 20 21
    ":" <pos> (273) 52 53 54
    "," <pos> (274) 9 24 58 62
    TKN_IVAL <ival> (275) 26
    TKN_STRVAL <strval> (276) 27 52 53 54 55 58 59 62 63
    TKN_IDENT <ident> (277) 5 9 10 28
    TKN_GARBAGE <garbage> (278)
    "+" <pos> (279) 38
    "-" <pos> (280) 39
    "=" <pos> (281) 51
    "&" <pos> (282) 33 46
    "*" <pos> (283) 34 35
    "/" <pos> (284) 36
    "%" <pos> (285) 37
    "!" <pos> (286) 31
    "~" <pos> (287) 32
    "||" (288) 50
    "&&" (289) 49
    "|" (290) 48
    "^" (291) 47
    "==" (292) 44
    "!=" (293) 45
    "<" (294) 40
    ">" (295) 42
    "<=" (296) 41
    ">=" (297) 43


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    library (44)
        on left: 1 2
        on right: 0
    global (45)
        on left: 3 4
        on right: 1
    funcdef <func> (46)
        on left: 5
        on right: 3
    vardecls <idents> (47)
        on left: 6
        on right: 4 19
    opt_idents <idents> (48)
        on left: 7 8
        on right: 5
    idents <idents> (49)
        on left: 9 10
        on right: 6 7 9
    stmts <stmts> (50)
        on left: 11 12
        on right: 5 11 13
    stmt <stmt> (51)
        on left: 13 14 15 16 17 18 19 20 21
        on right: 11 14 15 16
    opt_exprs <exprs> (52)
        on left: 22 23
        on right: 29
    exprs <exprs> (53)
        on left: 24 25
        on right: 22 24
    expr <expr> (54)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 14 15 16 18 20 24 25 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 62 63
    inline_asm (55)
        on left: 52 53 54 55
        on right: 21
    opt_asm_strs (56)
        on left: 56 57
        on right: 52
    asm_strs (57)
        on left: 58 59
        on right: 56 58
    opt_asm_regs (58)
        on left: 60 61
        on right: 52 53 54
    asm_regs (59)
        on left: 62 63
        on right: 60 62


State 0

    0 $accept: . library $end

    "auto"  shift, and go to state 1
    "func"  shift, and go to state 2

    $default  reduce using rule 2 (library)

    library   go to state 3
    global    go to state 4
    funcdef   go to state 5
    vardecls  go to state 6


State 1

    6 vardecls: "auto" . idents ";"

    TKN_IDENT  shift, and go to state 7

    idents  go to state 8


State 2

    5 funcdef: "func" . TKN_IDENT "(" opt_idents ")" "{" stmts "}"

    TKN_IDENT  shift, and go to state 9


State 3

    0 $accept: library . $end

    $end  shift, and go to state 10


State 4

    1 library: global .

    $default  reduce using rule 1 (library)


State 5

    3 global: funcdef .

    $default  reduce using rule 3 (global)


State 6

    4 global: vardecls .

    $default  reduce using rule 4 (global)


State 7

   10 idents: TKN_IDENT .

    $default  reduce using rule 10 (idents)


State 8

    6 vardecls: "auto" idents . ";"
    9 idents: idents . "," TKN_IDENT

    ";"  shift, and go to state 11
    ","  shift, and go to state 12


State 9

    5 funcdef: "func" TKN_IDENT . "(" opt_idents ")" "{" stmts "}"

    "("  shift, and go to state 13


State 10

    0 $accept: library $end .

    $default  accept


State 11

    6 vardecls: "auto" idents ";" .

    $default  reduce using rule 6 (vardecls)


State 12

    9 idents: idents "," . TKN_IDENT

    TKN_IDENT  shift, and go to state 14


State 13

    5 funcdef: "func" TKN_IDENT "(" . opt_idents ")" "{" stmts "}"

    TKN_IDENT  shift, and go to state 7

    $default  reduce using rule 8 (opt_idents)

    opt_idents  go to state 15
    idents      go to state 16


State 14

    9 idents: idents "," TKN_IDENT .

    $default  reduce using rule 9 (idents)


State 15

    5 funcdef: "func" TKN_IDENT "(" opt_idents . ")" "{" stmts "}"

    ")"  shift, and go to state 17


State 16

    7 opt_idents: idents .
    9 idents: idents . "," TKN_IDENT

    ","  shift, and go to state 12

    $default  reduce using rule 7 (opt_idents)


State 17

    5 funcdef: "func" TKN_IDENT "(" opt_idents ")" . "{" stmts "}"

    "{"  shift, and go to state 18


State 18

    5 funcdef: "func" TKN_IDENT "(" opt_idents ")" "{" . stmts "}"

    $default  reduce using rule 12 (stmts)

    stmts  go to state 19


State 19

    5 funcdef: "func" TKN_IDENT "(" opt_idents ")" "{" stmts . "}"
   11 stmts: stmts . stmt

    "auto"      shift, and go to state 1
    "if"        shift, and go to state 20
    "while"     shift, and go to state 21
    "return"    shift, and go to state 22
    "asm"       shift, and go to state 23
    "{"         shift, and go to state 24
    "}"         shift, and go to state 25
    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    vardecls    go to state 33
    stmt        go to state 34
    expr        go to state 35
    inline_asm  go to state 36


State 20

   14 stmt: "if" . "(" expr ")" stmt
   15     | "if" . "(" expr ")" stmt "else" stmt

    "("  shift, and go to state 37


State 21

   16 stmt: "while" . "(" expr ")" stmt

    "("  shift, and go to state 38


State 22

   17 stmt: "return" . ";"
   18     | "return" . expr ";"

    ";"         shift, and go to state 39
    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 40


State 23

   52 inline_asm: "asm" . "(" TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ":" opt_asm_strs ")"
   53           | "asm" . "(" TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ")"
   54           | "asm" . "(" TKN_STRVAL ":" opt_asm_regs ")"
   55           | "asm" . "(" TKN_STRVAL ")"

    "("  shift, and go to state 41


State 24

   13 stmt: "{" . stmts "}"

    $default  reduce using rule 12 (stmts)

    stmts  go to state 42


State 25

    5 funcdef: "func" TKN_IDENT "(" opt_idents ")" "{" stmts "}" .

    $default  reduce using rule 5 (funcdef)


State 26

   26 expr: TKN_IVAL .

    $default  reduce using rule 26 (expr)


State 27

   27 expr: TKN_STRVAL .

    $default  reduce using rule 27 (expr)


State 28

   28 expr: TKN_IDENT .

    $default  reduce using rule 28 (expr)


State 29

   33 expr: "&" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 43


State 30

   34 expr: "*" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 44


State 31

   31 expr: "!" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 45


State 32

   32 expr: "~" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 46


State 33

   19 stmt: vardecls .

    $default  reduce using rule 19 (stmt)


State 34

   11 stmts: stmts stmt .

    $default  reduce using rule 11 (stmts)


State 35

   20 stmt: expr . ";"
   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    "["   shift, and go to state 48
    ";"   shift, and go to state 49
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66


State 36

   21 stmt: inline_asm . ";"

    ";"  shift, and go to state 67


State 37

   14 stmt: "if" "(" . expr ")" stmt
   15     | "if" "(" . expr ")" stmt "else" stmt

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 68


State 38

   16 stmt: "while" "(" . expr ")" stmt

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 69


State 39

   17 stmt: "return" ";" .

    $default  reduce using rule 17 (stmt)


State 40

   18 stmt: "return" expr . ";"
   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    "["   shift, and go to state 48
    ";"   shift, and go to state 70
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66


State 41

   52 inline_asm: "asm" "(" . TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ":" opt_asm_strs ")"
   53           | "asm" "(" . TKN_STRVAL ":" opt_asm_regs ":" opt_asm_regs ")"
   54           | "asm" "(" . TKN_STRVAL ":" opt_asm_regs ")"
   55           | "asm" "(" . TKN_STRVAL ")"

    TKN_STRVAL  shift, and go to state 71


State 42

   11 stmts: stmts . stmt
   13 stmt: "{" stmts . "}"

    "auto"      shift, and go to state 1
    "if"        shift, and go to state 20
    "while"     shift, and go to state 21
    "return"    shift, and go to state 22
    "asm"       shift, and go to state 23
    "{"         shift, and go to state 24
    "}"         shift, and go to state 72
    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    vardecls    go to state 33
    stmt        go to state 34
    expr        go to state 35
    inline_asm  go to state 36


State 43

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   33     | "&" expr .
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("  shift, and go to state 47
    "["  shift, and go to state 48
    "-"  shift, and go to state 51
    "&"  shift, and go to state 53
    "*"  shift, and go to state 54

    $default  reduce using rule 33 (expr)


State 44

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   34     | "*" expr .
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("  shift, and go to state 47
    "["  shift, and go to state 48
    "-"  shift, and go to state 51
    "&"  shift, and go to state 53
    "*"  shift, and go to state 54

    $default  reduce using rule 34 (expr)


State 45

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   31     | "!" expr .
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("  shift, and go to state 47
    "["  shift, and go to state 48
    "-"  shift, and go to state 51
    "&"  shift, and go to state 53
    "*"  shift, and go to state 54

    $default  reduce using rule 31 (expr)


State 46

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   32     | "~" expr .
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("  shift, and go to state 47
    "["  shift, and go to state 48
    "-"  shift, and go to state 51
    "&"  shift, and go to state 53
    "*"  shift, and go to state 54

    $default  reduce using rule 32 (expr)


State 47

   29 expr: expr "(" . opt_exprs ")"

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    $default  reduce using rule 23 (opt_exprs)

    opt_exprs  go to state 73
    exprs      go to state 74
    expr       go to state 75


State 48

   30 expr: expr "[" . expr "]"

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 76


State 49

   20 stmt: expr ";" .

    $default  reduce using rule 20 (stmt)


State 50

   38 expr: expr "+" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 77


State 51

   39 expr: expr "-" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 78


State 52

   51 expr: expr "=" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 79


State 53

   46 expr: expr "&" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 80


State 54

   35 expr: expr "*" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 81


State 55

   36 expr: expr "/" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 82


State 56

   37 expr: expr "%" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 83


State 57

   50 expr: expr "||" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 84


State 58

   49 expr: expr "&&" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 85


State 59

   48 expr: expr "|" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 86


State 60

   47 expr: expr "^" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 87


State 61

   44 expr: expr "==" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 88


State 62

   45 expr: expr "!=" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 89


State 63

   40 expr: expr "<" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 90


State 64

   42 expr: expr ">" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 91


State 65

   41 expr: expr "<=" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 92


State 66

   43 expr: expr ">=" . expr

    TKN_IVAL    shift, and go to state 26
    TKN_STRVAL  shift, and go to state 27
    TKN_IDENT   shift, and go to state 28
    "&"         shift, and go to state 29
    "*"         shift, and go to state 30
    "!"         shift, and go to state 31
    "~"         shift, and go to state 32

    expr  go to state 93


State 67

   21 stmt: inline_asm ";" .

    $default  reduce using rule 21 (stmt)


State 68

   14 stmt: "if" "(" expr . ")" stmt
   15     | "if" "(" expr . ")" stmt "else" stmt
   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    ")"   shift, and go to state 94
    "["   shift, and go to state 48
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66


State 69

   16 stmt: "while" "(" expr . ")" stmt
   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    ")"   shift, and go to state 95
    "["   shift, and go to state 48
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66


State 70

   18 stmt: "return" expr ";" .

    $default  reduce using rule 18 (stmt)


State 71

   52 inline_asm: "asm" "(" TKN_STRVAL . ":" opt_asm_regs ":" opt_asm_regs ":" opt_asm_strs ")"
   53           | "asm" "(" TKN_STRVAL . ":" opt_asm_regs ":" opt_asm_regs ")"
   54           | "asm" "(" TKN_STRVAL . ":" opt_asm_regs ")"
   55           | "asm" "(" TKN_STRVAL . ")"

    ")"  shift, and go to state 96
    ":"  shift, and go to state 97


State 72

   13 stmt: "{" stmts "}" .

    $default  reduce using rule 13 (stmt)


State 73

   29 expr: expr "(" opt_exprs . ")"

    ")"  shift, and go to state 98


State 74

   22 opt_exprs: exprs .

    $default  reduce using rule 22 (opt_exprs)


State 75

   24 exprs: expr . "," exprs
   25      | expr .
   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    "["   shift, and go to state 48
    ","   shift, and go to state 99
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66

    $default  reduce using rule 25 (exprs)


State 76

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   30     | expr "[" expr . "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr

    "("   shift, and go to state 47
    "["   shift, and go to state 48
    "]"   shift, and go to state 100
    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "="   shift, and go to state 52
    "&"   shift, and go to state 53
    "*"   shift, and go to state 54
    "/"   shift, and go to state 55
    "%"   shift, and go to state 56
    "||"  shift, and go to state 57
    "&&"  shift, and go to state 58
    "|"   shift, and go to state 59
    "^"   shift, and go to state 60
    "=="  shift, and go to state 61
    "!="  shift, and go to state 62
    "<"   shift, and go to state 63
    ">"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">="  shift, and go to state 66


State 77

   29 expr: expr . "(" opt_exprs ")"
   30     | expr . "[" expr "]"
   35     | expr . "*" expr
   36     | expr . "/" expr
   37     | expr . "%" expr
   38     | expr . "+" expr
   38     | expr "+" expr .
   39     | expr . "-" expr
   40     | expr . "<" expr
   41     | expr . "<=" expr
   42     | expr . ">" expr
   43     | expr . ">=" expr
   44     | expr . "==" expr
   45     | expr . "!=" expr
   46     | expr . "&" expr
   47     | expr . "^" expr
   48     | expr . "|" expr
   49     | expr . "&&" expr
   50     | expr . "||" expr
   51     | expr . "=" expr
